# 2040-eight

./: 2040-eight.cpp  CMakeLists.txt  LICENSE  README.md
assets/: logo_ahnlak_1bit.hpp  spritesheet.aseprite  spritesheet.hpp
